2012-04-27 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am (JAVADOC_RESOURCES_FILES): javadoc does not
	necessarily emit "inherit.gif"; be more generic.

2012-04-26 Braden McDaniel  <braden@endoframe.com>

	Define BOOST_FILESYSTEM_VERSION=3 for compatibility with Boost
	1.44 and later (and consistency with Makefile.am).

	* src/libopenvrml/openvrml.vcxproj
	* src/local/libopenvrml-dl/openvrml-dl.vcxproj

2012-04-26 Braden McDaniel  <braden@endoframe.com>

	* src/local/libopenvrml-dl/openvrml/local/dl.cpp
	(openvrml::local::dl::foreachfile(const
	std::vector<boost::filesystem::path> &, int (*)(const std::string
	&, void *), void *): Applying the stream output operator to a
	boost::filesystem::path now yields a string within quotes; use
	boost::filesystem::path::generic_string instead.

2012-04-23 Braden McDaniel  <braden@endoframe.com>

	Quell warnings from gcc 4.7.

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	* src/openvrml-player/curlbrowserhost.cpp
	* src/script/javascript.cpp

2012-04-23 Tom Callaway <tcallawa@redhat.com>

	* src/openvrml-xembed/browserfactory.cpp: gcc 4.7 insists that
	intrusive_ptr_add_ref/release declarations occur before inclusion
	of <boost/intrusive_ptr.hpp>.

2012-04-23 Braden McDaniel  <braden@endoframe.com>

	* src/script/javascript.cpp: More fallout from SpiderMonkey moves
	away from using jsvals as ids.  Just mitigate this for now.

2012-04-23 Tom Callaway <tcallawa@redhat.com>

	libpng 1.5 removes direct access to struct members; use accessor
	functions instead.

	* src/node/vrml97/image_stream_listener.cpp
	* src/node/vrml97/image_stream_listener.h

2012-04-23 Braden McDaniel  <braden@endoframe.com>

	NP[P]_GetMIMEDescription returns const char * in recent variations
	of NPAPI.

	* configure.ac
	* src/mozilla-plugin/openvrml.cpp

2011-08-20 Braden McDaniel  <braden@endoframe.com>

	Define BOOST_FILESYSTEM_VERSION=3 for compatibility with Boost
	1.44 and later.

	* README: Note Boost 1.44 minimum version.